--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-streamlit
-langchain
-openai
-chromadb
-pandas
-openpyxl
+streamlit==1.31.0
+langchain==0.1.12
+langchain-community==0.0.27
+langchain-core==0.1.31
+openai==1.12.0
+chromadb==0.4.24
+pandas==2.2.1
+openpyxl==3.1.2
+python-dotenv==1.0.1
+pysqlite3-binary==0.5.2
