--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.31.0
 langchain==0.1.12
-langchain-community==0.0.27
+langchain-community>=0.0.28,<0.1.0
 langchain-core==0.1.31
 openai==1.12.0
 chromadb==0.4.24
