--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.31.0
 langchain==0.1.12
-langchain-community==0.0.27
+langchain-community>=0.0.28,<0.1.0
 langchain-core==0.1.31
 openai==1.12.0
 chromadb==0.4.24
@@ -10,3 +10,7 @@ python-dotenv==1.0.1
 pysqlite3-binary==0.5.2
 pathlib
 typing
+python-docx==1.0.1
+pypdf2==3.0.1
+tiktoken==0.5.2
+tqdm==4.66.1
