--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==1.31.0
-langchain==0.1.12
+langchain>=0.1.16,<0.2.0
 langchain-community>=0.0.28,<0.1.0
-langchain-core==0.1.31
-openai==1.12.0
+openai>=1.3.7,<2.0.0
 chromadb==0.4.24
 pandas==2.2.1
 openpyxl==3.1.2
@@ -10,7 +9,3 @@ python-dotenv==1.0.1
 pysqlite3-binary==0.5.2
 pathlib
 typing
-python-docx==1.0.1
-pypdf2==3.0.1
-tiktoken==0.5.2
-tqdm==4.66.1
